infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: hridooy/ticketing_auth
          resources:
            limits:
              memory: "512Mi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
      name: auth
      protocol: TCP
