infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  selector:
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
        - name: ticketing-client
          image: hridooy/ticketing_client
          resources:
            limits:
              memory: "512Mi"
              cpu: "512m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-srv
spec:
  selector:
    app: ticketing-client
  ports:
    - port: 3000
      targetPort: 3000
