infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: hridooy/ticketing_ticket
          resources:
            limits:
              memory: "512Mi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-ticket-srv
spec:
  selector:
    app: ticket
  ports:
    - port: 3000
      targetPort: 3000
      name: ticket
      protocol: TCP
