infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-mongo-depl
spec:
  selector:
    matchLabels:
      app: ticket-mongo
  template:
    metadata:
      labels:
        app: ticket-mongo
    spec:
      containers:
        - name: ticket-mongo
          image: mongo
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-mongo-srv
spec:
  selector:
    app: ticket-mongo
  ports:
    - port: 27017
      targetPort: 27017
